k8s/02-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-app
  labels:
    app: hello
spec:
  type: NodePort
  selector:
    app: hello
  ports:
  - port: 8080
    targetPort: 8080
